--- a/src/style/Streaming.css
+++ b/src/style/Streaming.css
@@ -1,15 +1,16 @@
-h4 {
+.streaming-title {
   font-family: "Segoe UI", sans-serif;
   min-width: 200px;
   font-size: 20px;
   font-weight: 600;
+  border-bottom: 2px solid rgb(125, 194, 255);
   color: #8b3a62; /* deep rosy plum */
   background: rgba(255, 228, 235, 0.7);
   padding: 10px 16px;
-  border-radius: 12px;
+  /* border-radius: 12px; */
   margin: 10px 0 20px;
   text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 37%);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 37%); */
   backdrop-filter: blur(2px);
   text-shadow: 1px 1px 2px rgba(255, 240, 245, 0.8);
   -webkit-user-select: none; /* Safari */
@@ -79,13 +80,13 @@ h4 {
 }
 
 .streaming-Item img {
-  width: 100px;
-  height: 100px;
+  width: 150px;
   object-fit: cover;
   display: block;
   border-bottom: 1px solid #eee;
   margin-top: 12px;
   border-radius: 4px;
+  padding: 10px;
 }
 
 .streaming-Item p {
@@ -101,7 +102,7 @@ h4 {
   font-family: "Segoe UI", sans-serif;
   backdrop-filter: blur(2px);
 }
-*/ .streaming-Item:hover {
+.streaming-Item:hover {
   transform: translateY(-4px) scale(1.05);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
