--- a/src/style/Streaming.css
+++ b/src/style/Streaming.css
@@ -1,21 +1,29 @@
 .streaming-title {
+  position: relative;
+  display: inline-block;
   font-family: "Segoe UI", sans-serif;
   min-width: 200px;
   font-size: 20px;
   font-weight: 600;
-  border-bottom: 2px solid rgb(125, 194, 255);
-  color: #8b3a62; /* deep rosy plum */
-  background: rgba(255, 228, 235, 0.7);
+  color: #8b3a62;
   padding: 10px 16px;
-  /* border-radius: 12px; */
   margin: 10px 0 20px;
   text-align: center;
-  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 37%); */
   backdrop-filter: blur(2px);
   text-shadow: 1px 1px 2px rgba(255, 240, 245, 0.8);
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.streaming-title::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px; /* Thickness of underline */
+  background: linear-gradient(to right, transparent, #ff94c1c4, transparent);
 }
 
 #streamingContainer {
@@ -25,9 +33,14 @@
   padding: 20px;
   max-width: 700px;
   width: 100%;
-  background: rgba(255, 240, 250, 0.9);
+  background: linear-gradient(
+    145deg,
+    rgba(255, 230, 245, 0.95),
+    rgba(255, 210, 235, 0.9)
+  );
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 50%);
+  border: 1px solid rgba(255, 180, 220, 0.5);
 }
 
 .list-group {
