--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,9 +1,50 @@
+/* General Typography */
+p {
+  font-size: 1.2rem;
+  color: #8b3a62;
+  margin: 10px 0;
+}
+
+h2 {
+  font-size: 1.8rem;
+  color: #ff94c1;
+  margin-top: 20px;
+  text-align: center;
+}
+
+/* Loading Message */
 #loadingMessage {
   font-weight: bold;
   font-size: 1.2rem;
   margin-bottom: 1rem;
 }
 
+/* Main Title */
+#mainTitle {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #f79fcd;
+  margin-bottom: 10px;
+  font-family: "Georgia", serif;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 78%);
+  text-align: center;
+  position: relative;
+  padding: 7px;
+}
+
+#mainTitle::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px; /* Thickness of underline */
+  background: linear-gradient(to right, transparent, #ff94c1c4, transparent);
+  box-shadow: rgb(255 150 212 / 41%) 0px 3px 5px 2px;
+}
+
+/* Horizontal Rule Styles */
 hr {
   border: none;
   height: 1px;
@@ -14,35 +55,10 @@ hr {
 
 .hr-underline {
   margin-top: 0;
+  box-shadow: rgb(255 150 212 / 41%) 0px 3px 5px 2px;
 }
 
-#mainTitle {
-  font-size: 2.5rem;
-  font-weight: 600;
-  color: #f79fcd;
-  margin-bottom: 10px;
-  font-family: "Georgia", serif;
-  letter-spacing: 1px;
-  text-shadow: 2px 2px 6px rgba(0, 0, 0, 78%);
-  text-align: center;
-  border-bottom: 2px solid #ff94c1c4;
-  border-radius: 16px;
-  box-shadow: 7px 11px 24px #ffbae34f;
-  padding: 7px;
-}
-
-p {
-  font-size: 1.2rem;
-  color: #8b3a62;
-  margin: 10px 0;
-}
-h2 {
-  font-size: 1.8rem;
-  color: #ff94c1;
-  margin-top: 20px;
-  text-align: center;
-}
-
+/* Footer */
 #footer p {
   font-size: 0.8rem;
   color: #ffffff;
