--- a/src/style/Streaming.css
+++ b/src/style/Streaming.css
@@ -24,6 +24,7 @@
   width: 100%;
   height: 2px; /* Thickness of underline */
   background: linear-gradient(to right, transparent, #ff94c1c4, transparent);
+  box-shadow: rgb(255 150 212 / 41%) 0px 3px 5px 2px;
 }
 
 #streamingContainer {
