--- a/src/style/App.css
+++ b/src/style/App.css
@@ -63,3 +63,74 @@ hr {
   font-size: 0.8rem;
   color: #ffffff;
 }
+
+/* CATEGORY */
+
+.category-title {
+  position: relative;
+
+  font-family: "Segoe UI", sans-serif;
+  min-width: 200px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #8b3a62;
+  padding: 10px 16px;
+  margin: 10px 0 20px;
+  text-align: center;
+  backdrop-filter: blur(2px);
+  text-shadow: 1px 1px 2px rgba(255, 240, 245, 0.8);
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.category-title::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px; /* Thickness of underline */
+  background: linear-gradient(to right, transparent, #ff94c1c4, transparent);
+  box-shadow: rgb(255 150 212 / 41%) 0px 3px 5px 2px;
+}
+
+.category-layout {
+  flex-direction: column;
+  padding: 10px;
+}
+
+.category-menu {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  min-width: auto;
+  gap: 8px;
+  margin-bottom: 32px;
+}
+
+.category-tab {
+  min-width: 180px;
+  display: inline-block;
+  border: none;
+  padding: 12px 24px;
+  background-color: rgba(255, 240, 245, 0.5); /* Blush tint */
+  color: #8b3a62; /* Deep rosy plum */
+  text-decoration: none;
+  font-family: "Segoe UI", sans-serif;
+  font-weight: 600;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+  text-shadow: 1px 1px 2px rgba(255, 240, 245, 0.6);
+  cursor: pointer;
+}
+
+.category-tab:hover {
+  background-color: rgba(255, 240, 245, 0.85);
+  transform: translateY(-2px);
+  color: #5a1f3a; /* Darker hover */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
